# ITPAL

./: .gitignore  LICENSE  README.md  build.sh  clean.sh  requirements.yml  test_wheels.sh
.conda/: build.sh  meta.yaml
.github/workflows/: build_and_upload_conda_packages.yaml  publish_conda.yml
conda/: build.sh  meta.yaml
cpp/: CMakeLists.txt  CMakeLists_conda.txt  README.md  pyproject.toml  setup.py  version.map
cpp/include/: NlOptUtil.h  PyArmaConverter.h
cpp/include/projection/: BatchedCovOnlyProjection.h  BatchedDiagCovOnlyProjection.h  BatchedProjection.h  BatchedSplitDiagMoreProjection.h  CovOnlyMoreProjection.h  DiagCovOnlyMoreProjection.h  MoreProjection.h  SplitDiagMoreProjection.h
cpp/src/projection/: BatchedCovOnlyProjection.cpp  BatchedDiagCovOnlyProjection.cpp  BatchedProjection.cpp  BatchedSplitDiagMoreProjection.cpp  CovOnlyMoreProjection.cpp  DiagCovOnlyMoreProjection.cpp  MoreProjection.cpp  PyProjection.cpp  SplitDiagMoreProjection.cpp
python/cvx/: cvxlayers_projection.py
python/fwd_kl/: FwdKLProjection.py
python/plots/: interpolate1d.py  interpolate2d.py  plot_util.py
python/projection/: CovOnlyMoreProjection.py  DiagCovOnlyMoreProjection.py  ITPS.py  MoreProjection.py  SplitMoreProjection.py  pytorch_op.py
python/tests/: cov_only.py  diag_cov_only.py  ecc_backward.py  eec_forward.py  eo_grad.py  kl_projection.py  partial_diffs.py  regress_backward.py  regress_backward_py_cpp.py  regress_cvx.py  regress_forward_pass.py  rt_test.py  run_dual_grad.py  run_full_grads.py  run_np_kl.py  run_partial_diffs.py  run_projection.py  test.py  test_batch_cov_only.py  test_batch_split_more_proj.py  test_conv_only.py  test_cov_only.py  test_diag_cov_only.py  test_full.py  test_np_kl.py  test_partial_diffs.py  test_projection.py  test_split_grad.py  test_split_more.py  test_split_more_proj.py  test_split_more_rt.py  test_split_more_rt_proj.py  unconstrained_entropy.py
python/tests/other/: backprop.py  backward_pass.py  run_backprop.py  run_full_grads.py
python/util/: central_differences.py  sample.py
